--- a/judo_profiles/templates/users/manage.html
+++ b/judo_profiles/templates/users/manage.html
@@ -6,6 +6,18 @@
 
 {% block style %}
     <script src="https://unpkg.com/htmx.org@2.0.4"></script>
+    <script>
+        const delay = ms => new Promise(res => setTimeout(res, ms))
+        async function copy_token(token){
+            const button = document.getElementById("copy")
+            await navigator.clipboard.writeText(token)
+            button.innerHTML = "{% translate "Key copied" %}"
+            button.classList.add("active")
+            await delay(1500)
+            button.innerHTML = "{% translate "Copy key" %}"
+            button.classList.remove("active")
+        }
+    </script>
 {% endblock %}
 
 {% block manage %}active" aria-current="page{% endblock %}
@@ -16,6 +28,13 @@
             {% csrf_token %}
             <input type="hidden" name="trainer" value="{{ user }}">
             <input type="submit" class="nav-link" value="{% translate "Make trainer" %}">
+        </form>
+    {% endif %}
+    {% if not user.is_staff %}
+        <form onsubmit="if (!confirm('{% blocktranslate with user=user %}{{ user }} will have access to all management pages{% endblocktranslate %}')){ return false }" method="post">
+            {% csrf_token %}
+            <input type="hidden" name="staff" value="{{ user }}">
+            <input type="submit" class="nav-link" value="{% translate "Make staff" %}">
         </form>
     {% endif %}
     {% if user.is_active %}
@@ -35,40 +54,28 @@
 {% block content %}
     <div class="container">
         <div class="row mb-3">
-            <h2 class="col">{% blocktranslate with user=user %}Permissions of {{ user }}{% endblocktranslate %}</h2>
+            <h2 class="col text-nowrap text-center">{% blocktranslate with user=user %}Permissions of {{ user }}{% endblocktranslate %}</h2>
             <form method="post" class="col">
-            {% csrf_token %}
-                <div class="d-flex justify-content-end">
+                {% csrf_token %}
+                <div class="d-flex justify-content-center">
                     {% if not user.token and not user.is_active %}
-                        <button class="btn btn-secondary" name="add">{% translate "Create key" %}</button>
+                        <button class="btn btn-secondary text-nowrap" name="add">{% translate "Create key" %}</button>
                     {% else %}
                         {% if not user.is_active or user.token %}
                             <table class="text-center">
                                 <tr>
                                     {% if user.token.valid_for < 1 %}
                                         <td class="pe-3">{% translate "Key expired, without being used" %}</td>
-                                        <td><button class="btn btn-secondary" name="renew">{% translate "Renew key" %}</button></td>
+                                        <td><button class="btn btn-secondary text-nowrap" name="renew">{% translate "Renew key" %}</button></td>
                                     {% else %}
                                         <td class="pe-3">{{ days }}</td>
-                                        <td class="pe-2"><button id="copy" class="btn btn-secondary" onclick="copy_token('{{ user.token }}'); return false;">{% translate "Copy key" %}</button></td>
-                                        <script>
-                                            const delay = ms => new Promise(res => setTimeout(res, ms))
-                                            async function copy_token(token){
-                                                const button = document.getElementById("copy")
-                                                await navigator.clipboard.writeText(token)
-                                                button.innerHTML = "{% translate "Key copied" %}"
-                                                button.classList.add("active")
-                                                await delay(1500)
-                                                button.innerHTML = "{% translate "Copy key" %}"
-                                                button.classList.remove("active")
-                                            }
-                                        </script>
+                                        <td class="pe-2"><button id="copy" class="btn btn-secondary text-nowrap" onclick="copy_token('{{ user.token }}'); return false;">{% translate "Copy key" %}</button></td>
                                     {% endif %}
-                                    <td><button class="btn btn-secondary" name="delete_token">{% translate "Delete key" %}</button></td>
+                                    <td><button class="btn btn-secondary text-nowrap" name="delete_token">{% translate "Delete key" %}</button></td>
                                 </tr>
                             </table>
                         {% else %}
-                            <button class="btn btn-secondary" name="reset">{% translate "Create key to reset the password" %}</button>
+                            <button class="btn btn-secondary text-nowrap" name="reset">{% translate "Create key to reset the password" %}</button>
                         {% endif %}
                     {% endif %}
                 </div>
