--- a/judo_profiles/templates/account.html
+++ b/judo_profiles/templates/account.html
@@ -73,10 +73,27 @@
     {% if not request.user.is_superuser %}
         <hr class="mx-auto" style="width: 30rem;">
         <div class="d-flex justify-content-center">
-            <form method="post" onsubmit="if (!confirm('{% translate "This will delete all data that is linked to this account permanently! Really delete everything?" %}')){ return false }">
-                {% csrf_token %}
-                <button class="btn btn-danger" name="delete">Konto und Daten löschen</button>
-            </form>
+            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete_modal">Konto und Daten löschen</button>
+        </div>
+        <div class="modal fade" id="delete_modal" tabindex="-1" aria-labelledby="delete_modal_label" aria-hidden="true">
+            <div class="modal-dialog ">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="delete_modal_label">{% translate "Delete" %}?</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        {% translate "This will delete all data that is linked to this account permanently! Really delete everything?" %}
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">{% translate "Cancel" %}</button>
+                        <form method="post">
+                            {% csrf_token %}
+                            <button class="btn btn-danger" name="delete">{% translate "Ok" %}</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     {% endif %}
 {% endblock %}
