--- a/judo_profiles/templates/users/manage.html
+++ b/judo_profiles/templates/users/manage.html
@@ -24,18 +24,10 @@
 
 {% block admin_actions %}
     {% if not user|has_group:"Trainers" %}
-        <form onsubmit="if (!confirm('{% blocktranslate with user=user %}{{ user }} will be able to create profiles in the future{% endblocktranslate %}')){ return false }" method="post">
-            {% csrf_token %}
-            <input type="hidden" name="trainer" value="{{ user }}">
-            <input type="submit" class="nav-link" value="{% translate "Make trainer" %}">
-        </form>
+        <button type="button" class="nav-link" data-bs-toggle="modal" data-bs-target="#trainer_modal">{% translate "Make trainer" %}</button>
     {% endif %}
     {% if not user.is_staff %}
-        <form onsubmit="if (!confirm('{% blocktranslate with user=user %}{{ user }} will have access to all management pages{% endblocktranslate %}')){ return false }" method="post">
-            {% csrf_token %}
-            <input type="hidden" name="staff" value="{{ user }}">
-            <input type="submit" class="nav-link" value="{% translate "Make staff" %}">
-        </form>
+        <button type="button" class="nav-link" data-bs-toggle="modal" data-bs-target="#staff_modal">{% translate "Make staff" %}</button>
     {% endif %}
     {% if user.is_active %}
         <form method="post">
@@ -44,17 +36,13 @@
             <input type="submit" class="nav-link" value="{% translate "Deactivate" %}">
         </form>
     {% endif %}
-    <form onsubmit="if (!confirm('{% blocktranslate with user=user %}Really delete {{ user }} permanently?{% endblocktranslate %}\n{% if user|has_group:"Trainers" %}{% blocktranslate with user=user %}All profiles created by {{ user }} will be deleted!!{% endblocktranslate %}{% else %}{% blocktranslate with user=user %}The profile of {{ user }} will also be deleted!{% endblocktranslate %}{% endif %}')){ return false }" method="post">
-        {% csrf_token %}
-        <input type="hidden" name="delete" value="{{ user }}">
-        <input type="submit" class="nav-link" value="{% translate "Delete" %}">
-    </form>
+    <button type="button" class="nav-link" data-bs-toggle="modal" data-bs-target="#delete_modal">{% translate "Delete" %}</button>
 {% endblock %}
 
 {% block content %}
     <div class="container">
         <div class="row mb-3">
-            <h2 class="col text-nowrap text-center">{% blocktranslate with user=user %}Permissions of {{ user }}{% endblocktranslate %}</h2>
+            <h2 class="col text-center">{% blocktranslate with user=user %}Permissions of {{ user }}{% endblocktranslate %}</h2>
             <form method="post" class="col">
                 {% csrf_token %}
                 <div class="d-flex justify-content-center">
@@ -136,5 +124,73 @@
                 <div class="alert alert-warning m-5">{% translate "Permissions can only be changed for active users" %}</div>
             </div>
         {% endif %}
+    </div>
+
+    <div id="modals">
+        <div class="modal fade" id="trainer_modal" tabindex="-1" aria-labelledby="trainer_modal_label" aria-hidden="true">
+            <div class="modal-dialog ">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="trainer_modal_label">{% translate "Make trainer" %}?</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        {% blocktranslate with user=user %}{{ user }} will be able to create profiles in the future{% endblocktranslate %}
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">{% translate "Cancel" %}</button>
+                        <form method="post">
+                            {% csrf_token %}
+                            <input type="hidden" name="trainer" value="{{ user }}">
+                            <input type="submit" class="btn btn-secondary" value="{% translate "Ok" %}">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="staff_modal" tabindex="-1" aria-labelledby="staff_modal_label" aria-hidden="true">
+            <div class="modal-dialog ">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="staff_modal_label">{% translate "Make staff" %}?</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        {% blocktranslate with user=user %}{{ user }} will have access to all management pages{% endblocktranslate %}
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">{% translate "Cancel" %}</button>
+                        <form method="post">
+                            {% csrf_token %}
+                            <input type="hidden" name="staff" value="{{ user }}">
+                            <input type="submit" class="btn btn-secondary" value="{% translate "Ok" %}">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="delete_modal" tabindex="-1" aria-labelledby="delete_modal_label" aria-hidden="true">
+            <div class="modal-dialog ">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="delete_modal_label">{% translate "Delete" %}?</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        {% blocktranslate with user=user %}Really delete {{ user }} permanently?{% endblocktranslate %}<br>{% if user|has_group:"Trainers" %}{% blocktranslate with user=user %}All profiles created by {{ user }} will be deleted!!{% endblocktranslate %}{% else %}{% blocktranslate with user=user %}The profile of {{ user }} will also be deleted!{% endblocktranslate %}{% endif %}
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">{% translate "Cancel" %}</button>
+                        <form method="post">
+                            {% csrf_token %}
+                            <input type="hidden" name="delete" value="{{ user }}">
+                            <input type="submit" class="btn btn-danger" value="{% translate "Ok" %}">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
