--- a/judo_profiles/templates/profiles.html
+++ b/judo_profiles/templates/profiles.html
@@ -11,7 +11,7 @@
 {% block profiles %}active" aria-current="page{% endblock %}
 
 {% block actions %}
-    {% if perms.profiles.add_profile %}
+    {% if request.user|has_group:"Trainers" or request.user.is_superuser %}
         <a class="nav-link" href="{% url "profiles-new" %}">{% translate "New profile" %}</a>
     {% endif %}
 {% endblock %}
